api value bind for customers

--- a/src/app/admin/tarriffs/contract/contract.component.html
+++ b/src/app/admin/tarriffs/contract/contract.component.html
@@ -33,7 +33,7 @@
                  
                   </div>
                 </div>
-                <!-- <app-datatable (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="tableheader"></app-datatable> -->
+                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="tableheader"></app-datatable>
             </div>
             </div>
           </div>
