--- a/src/app/admin/dashboard/main/main.component.html
+++ b/src/app/admin/dashboard/main/main.component.html
@@ -14,7 +14,7 @@
             </div>
             <div class="card-right">
               <div>
-                <h5 class="float-end">Sales</h5>
+                <h5 class="float-end">Today Sales</h5>
               </div>
               <div class="m-r-10 m-l-10">
                 <!-- <h3 class="font-weight-bold float-end mb-0"> 650</h3> -->
@@ -36,7 +36,7 @@
             </div>
             <div class="card-right">
               <div>
-                <h5 class="float-end">Operation</h5>
+                <h5 class="float-end">Month Sales</h5>
               </div>
               <div class="m-r-10 m-l-10">
                 <!-- <h3 class="font-weight-bold float-end mb-0"> 54</h3> -->
@@ -58,7 +58,7 @@
             </div>
             <div class="card-right">
               <div>
-                <h5 class="float-end">Accounts</h5>
+                <h5 class="float-end">Today Cash Booking </h5>
               </div>
               <div class="m-r-10 m-l-10">
                 <!-- <h3 class="font-weight-bold float-end mb-0"> 129</h3> -->
@@ -80,7 +80,7 @@
             </div>
             <div class="card-right">
               <div>
-                <h5 class="float-end">Payments</h5>
+                <h5 class="float-end">Month Cash Booking</h5>
               </div>
               <div class="m-r-10 m-l-10">
                 <!-- <h3 class="font-weight-bold float-end mb-0"> $20,125</h3> -->
