--- a/src/app/admin/transaction/dialogs/addedit/addedit.component.html
+++ b/src/app/admin/transaction/dialogs/addedit/addedit.component.html
@@ -1,3 +1,4 @@
+
 <form class=" m-4" *ngIf="this.data.tabledatadeatils.dailogPage=='inscanDailog'">
     <div class="row">
         <div class="col-lg-12">
@@ -66,6 +67,61 @@
         </div>
     </div>
 </form>
+<form class=" m-4" *ngIf="this.data.tabledatadeatils.dailogPage=='deliveryDailog'">
+    <div class="row">
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Office Name</mat-label>
+                <input matInput required>
+
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Delivery Date</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Awb Number</mat-label>
+                <input matInput required>
+
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Office Delivery Time</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Proof Time</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Proof Of Delivery</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Reciver Name</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+        <div class="col-lg-12">
+            <mat-form-field class="example-full-width" appearance="outline">
+                <mat-label>Reciver Phone</mat-label>
+                <input matInput>
+            </mat-form-field>
+        </div>
+    </div>
+</form>
  
     <div class="mt-4 table-responsive">
         <div class="table table-bordered">
@@ -98,12 +154,16 @@
         </div>
        
     </div>
-    <div class="m-4">
-        <div class="row ">
-            <div class="col-xl-12">
-                <button class="btn-space" mat-raised-button color="primary" [mat-dialog-close]="1" >Save</button>
-                <button type="button" mat-raised-button color="warn" [mat-dialog-close]="1" >Reset</button>
+
+    <mat-dialog-actions align="end">
+        <div class="m-4">
+            <div class="row ">
+                <div class="col-xl-12">
+                    <button class="btn-space" mat-raised-button color="primary" [mat-dialog-close]="1" >Save</button>
+                    <button type="button" mat-raised-button color="warn" [mat-dialog-close]="1" >Reset</button>
+                </div>
             </div>
         </div>
-    </div>
+      </mat-dialog-actions>
+
 
