--- a/src/app/admin/tarriffs/dialogs/tarrifadd/tarrifadd.component.html
+++ b/src/app/admin/tarriffs/dialogs/tarrifadd/tarrifadd.component.html
@@ -353,7 +353,7 @@
                     <mat-form-field class="example-full-width" appearance="outline">
                       <mat-label>Customer</mat-label>
                       <input type="text" placeholder="Pick one" [listValidator]="filteredcustomerslist | async" [validatorKey]="'customer_id'" aria-label="Number"  formControlName="customer" matInput
-                      [matAutocomplete]="customer">
+                      [matAutocomplete]="customer" (input)='onChangeSearch(contractTarrifForm.value.customer)'>
                       <mat-autocomplete autoActiveFirstOption [displayWith]="displaycustomerslist.bind(this)"
                       #customer="matAutocomplete">
                       <mat-option *ngFor="let option of filteredcustomerslist | async" [value]="option.customer_id">
@@ -467,14 +467,14 @@
                 <div class="col-md-6 col-sm-6 mb-2">
                   <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Location Tarrif</mat-label>
-                    <input type="text" placeholder="Pick one" [listValidator]="filteredparentoffice | async" [validatorKey]="'office_id'" aria-label="Number"  formControlName="location_tarrif" matInput
+                    <input type="text" placeholder="Pick one" [listValidator]="filteredlocationtar | async" [validatorKey]="'lt_id'" aria-label="Number"  formControlName="location_tarrif" matInput
                     [matAutocomplete]="location_tarrif">
-                    <!-- <mat-autocomplete autoActiveFirstOption [displayWith]="displayparentoffice.bind(this)"
-                    #rate_tarrif="matAutocomplete">
-                    <mat-option *ngFor="let option of filteredparentoffice | async" [value]="option.office_id">
-                        {{option.office_name}}
+                    <mat-autocomplete autoActiveFirstOption [displayWith]="displayloctar.bind(this)"
+                    #location_tarrif="matAutocomplete">
+                    <mat-option *ngFor="let option of filteredlocationtar | async" [value]="option.lt_id">
+                        {{option.lt_name}}
                     </mat-option>
-                    </mat-autocomplete> -->
+                    </mat-autocomplete>
                   
                     <mat-error *ngIf="rateTarrifForm.get('location_tarrif').hasError('required')">
                       Location Tarrif is required
@@ -516,17 +516,17 @@
                             </div>
                             <div class="col-md-2 col-sm-2 mb-2">
                                 <mat-form-field class="example-full-width" appearance="outline">
-                                  <mat-label>Rs Value</mat-label>
-                                  <input matInput type="number" formControlName="rs_value">
+                                  <mat-label>Price</mat-label>
+                                  <input matInput type="number" formControlName="price">
                                   
                                  
                                 </mat-form-field>
                             </div>
                             <div class="col-md-2 col-sm-2 mb-2">
                                 <mat-form-field class="example-full-width" appearance="outline">
-                                    <mat-label>From</mat-label>
+                                    <mat-label>Unit</mat-label>
                                     <input type="text" placeholder="Pick one" [listValidator]="filteredparentoffice | async"
-                                        [validatorKey]="'office_id'" aria-label="Number" formControlName="rate_options" matInput
+                                        [validatorKey]="'office_id'" aria-label="Number" formControlName="unit" matInput
                                         [matAutocomplete]="rate_options">
                                     <!-- <mat-autocomplete autoActiveFirstOption [displayWith]="displayparentoffice.bind(this)"
                                         #rate_options="matAutocomplete">
@@ -556,7 +556,7 @@
 
                     <div class="example-button-row">
                         <button mat-raised-button color="primary" type="submit" [mat-dialog-close]="1" [disabled]="!rateTarrifForm.valid"
-                            (click)="onrateTarrifFormSubmit(data.actionName)">Save</button>
+                            (click)="onrateTarrifFormSubmit(data.actionName,data.tabledatadeatils.id)">Save</button>
                         <button mat-raised-button color="warn" (click)="onNoClick()" tabindex="-1">Cancel</button>
                     </div>
                 </div>
