search added in costomer

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -16,6 +16,8 @@
                 
 /*                 [1. Common ]                   			*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@ng-select/ng-select/themes/default.theme.css";
+
 @import "common/_variables";
 @import "common/_mixins";
 @import "common/_customanimate.scss";
