--- a/src/app/admin/dashboard/main/main.component.html
+++ b/src/app/admin/dashboard/main/main.component.html
@@ -17,7 +17,7 @@
                 <h5 class="float-end">Today Sales</h5>
               </div>
               <div class="m-r-10 m-l-10">
-                <!-- <h3 class="font-weight-bold float-end mb-0"> 650</h3> -->
+                <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.today_sale}}</h3>
               </div>
             </div>
           </div>
@@ -39,7 +39,7 @@
                 <h5 class="float-end">Month Sales</h5>
               </div>
               <div class="m-r-10 m-l-10">
-                <!-- <h3 class="font-weight-bold float-end mb-0"> 54</h3> -->
+                <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.month_sale}}</h3>
               </div>
             </div>
           </div>
@@ -61,7 +61,7 @@
                 <h5 class="float-end">Today Cash Booking </h5>
               </div>
               <div class="m-r-10 m-l-10">
-                <!-- <h3 class="font-weight-bold float-end mb-0"> 129</h3> -->
+                <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.today_cash_booking}}</h3>
               </div>
             </div>
           </div>
@@ -83,7 +83,7 @@
                 <h5 class="float-end">Month Cash Booking</h5>
               </div>
               <div class="m-r-10 m-l-10">
-                <!-- <h3 class="font-weight-bold float-end mb-0"> $20,125</h3> -->
+                <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.month_cash_booking}}</h3>
               </div>
             </div>
           </div>
