--- a/src/app/admin/dashboard/salesdashboard/salesdashboard.component.html
+++ b/src/app/admin/dashboard/salesdashboard/salesdashboard.component.html
@@ -10,14 +10,14 @@
           <div class="card card-statistic-2">
             <div class="clearfix">
               <div class="card-icon shadow-primary bg-purple">
-                <i class="material-icons align-middle">face</i>
+                <i class="material-icons align-middle">storefront</i>
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Appointments</h5>
+                  <h5 class="float-end">Today Sales</h5>
                 </div>
                 <div class="m-r-10 m-l-10">
-                  <h3 class="font-weight-bold float-end mb-0"> 650</h3>
+                  <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.today_sale}}</h3>
                 </div>
               </div>
             </div>
@@ -32,14 +32,14 @@
           <div class="card card-statistic-2">
             <div class="clearfix">
               <div class="card-icon shadow-primary bg-orange">
-                <i class="material-icons align-middle">content_cut</i>
+                <i class="material-icons align-middle">work_history</i>
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Operations</h5>
+                  <h5 class="float-end">Month Sales</h5>
                 </div>
                 <div class="m-r-10 m-l-10">
-                  <h3 class="font-weight-bold float-end mb-0"> 54</h3>
+                  <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.month_sale}}</h3>
                 </div>
               </div>
             </div>
@@ -58,10 +58,10 @@
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">New Patients</h5>
+                  <h5 class="float-end">Today Cash Booking </h5>
                 </div>
                 <div class="m-r-10 m-l-10">
-                  <h3 class="font-weight-bold float-end mb-0"> 129</h3>
+                  <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.today_cash_booking}}</h3>
                 </div>
               </div>
             </div>
@@ -76,14 +76,14 @@
           <div class="card card-statistic-2">
             <div class="clearfix">
               <div class="card-icon shadow-primary bg-blue">
-                <i class="material-icons align-middle">local_activity</i>
+                <i class="material-icons align-middle">payment</i>
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Earning</h5>
+                  <h5 class="float-end">Month Cash Booking</h5>
                 </div>
                 <div class="m-r-10 m-l-10">
-                  <h3 class="font-weight-bold float-end mb-0"> $20,125</h3>
+                  <h3 class="font-weight-bold float-end mb-0">{{this.dasboadCount.month_cash_booking}}</h3>
                 </div>
               </div>
             </div>
