--- a/src/app/admin/dashboard/accountsdashboard/accountsdashboard.component.html
+++ b/src/app/admin/dashboard/accountsdashboard/accountsdashboard.component.html
@@ -2,14 +2,14 @@
     <div class="content-block">
       <div class="block-header">
         <!-- breadcrumb -->
-        <app-breadcrumb [title]="'Dashboad 2'" [items]="[]" [active_item]="'Dashboad 2'"></app-breadcrumb>
+        <app-breadcrumb [title]="'Dashboad 2'" [items]="[]" [active_item]="'Operations'"></app-breadcrumb>
       </div>
       <div class="row clearfix">
         <!-- Bar chart with line -->
         <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Doctor Performance</h2>
+              <h2>Delivery Performance</h2>
             </div>
             <div class="body">
               <div class="recent-report__chart">
@@ -27,7 +27,7 @@
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
           <div class="plain-card">
             <div class="card-inner">
-              <h6 class="tx-primary m-b-10">Patient Report</h6>
+              <h6 class="tx-primary m-b-10">Delivery Report</h6>
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
@@ -50,7 +50,7 @@
           </div>
           <div class="plain-card">
             <div class="card-inner">
-              <h6 class="tx-primary m-b-10">Income Report</h6>
+              <h6 class="tx-primary m-b-10">Inbound Report</h6>
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
@@ -73,7 +73,7 @@
           </div>
           <div class="plain-card">
             <div class="card-inner">
-              <h6 class="tx-primary m-b-10">Expense Report</h6>
+              <h6 class="tx-primary m-b-10">OutBond Report</h6>
               <div class="row">
                 <div class="col-4">
                   <label class="font-14">Today</label>
@@ -124,14 +124,14 @@
                 <div class="col-md-12 col-xl-4 d-flex flex-column justify-content-center">
                   <div class="ml-xl-3 m-b-20">
                     <h2>$1,17,289</h2>
-                    <h4 class="font-weight-light col-green">Total Income</h4>
+                    <h4 class="font-weight-light col-green">Inscan AWB Pending Delivery</h4>
                     <p class="mb-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
                       Aenean commodo ligula eget dolor.
                     </p>
                   </div>
                   <div class="ml-xl-3">
                     <h2>$1,17,289</h2>
-                    <h4 class="font-weight-light col-orange">Total Expense</h4>
+                    <h4 class="font-weight-light col-orange">Booking AWB Pending Delivery</h4>
                     <p class="mb-2"> Cras dapibus. Vivamus elementum semper nisi. Aenean
                       vulputate eleifend tellus.
                     </p>
@@ -140,7 +140,7 @@
                 <div class="col-md-12 col-xl-8">
                   <div class="row">
                     <div class="col-md-6">
-                      <h5 class="tx-primary m-b-30">Country Wise Patients</h5>
+                      <h5 class="tx-primary m-b-30">State Wise Pending Delivery</h5>
                       <div class="progress-list m-b-10">
                         <div class="details">
                           <div class="title">USA</div>
@@ -249,7 +249,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
           <div class="card">
             <div class="header">
-              <h2>Patients Group</h2>
+              <h2>Oldest Outbond AWB</h2>
               <button mat-icon-button [matMenuTriggerFor]="menu" class="header-dropdown">
                 <mat-icon>more_vert</mat-icon>
               </button>
@@ -276,7 +276,7 @@
                       <div class="lbl-bedge l-bg-orange">
                         <span class="lbl-bedge-title">C</span>
                       </div>
-                      <div class="group-details font-16">Cholesterol</div>
+                      <div class="group-details font-16">Office Name</div>
                     </div>
                     <div class="ms-auto">
                       <div class="media-title text-muted mb-0 font-14">5 Patients</div>
@@ -345,7 +345,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
           <div class="card">
             <div class="header">
-              <h2>Notice Board</h2>
+              <h2>Complains</h2>
               <button mat-icon-button [matMenuTriggerFor]="menu" class="header-dropdown">
                 <mat-icon>more_vert</mat-icon>
               </button>
@@ -506,11 +506,11 @@
                   <thead>
                     <tr>
                       <th>No</th>
-                      <th>Name</th>
-                      <th>Assigned Doctor</th>
-                      <th>Date Of Admit</th>
-                      <th>Diseases</th>
-                      <th>Room No</th>
+                      <th>AWB No.</th>
+                      <th>Destination</th>
+                      <th>Date Of Booking</th>
+                      <th>Status</th>
+                      <th>Packet</th>
                       <th>Edit</th>
                     </tr>
                   </thead>
