--- a/src/app/admin/dashboard/operationsdashboard/operationsdashboard.component.html
+++ b/src/app/admin/dashboard/operationsdashboard/operationsdashboard.component.html
@@ -2,14 +2,14 @@
     <div class="content-block">
       <div class="block-header">
         <!-- breadcrumb -->
-        <app-breadcrumb [title]="'Dashboard'" [items]="[]" [active_item]="'Dashboard'"></app-breadcrumb>
+        <app-breadcrumb [title]="'Dashboard'" [items]="[]" [active_item]="'Finances'"></app-breadcrumb>
       </div>
       <!-- Widgets -->
       <div class="row">
         <div class="col-lg-12">
           <div class="card">
             <div class="body">
-              <div class="row align-items-center">
+              <!-- <div class="row align-items-center">
                 <div class="col-md-4">
                   <img src="assets/images/pages/welcome.png" alt="" class="w-100">
                 </div>
@@ -23,7 +23,7 @@
                     providing you with personalized, comprehensive health care focusing on wellness and
                     prevention.</p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -38,7 +38,7 @@
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Blood Pressure</h5>
+                  <h5 class="float-end">Unpaid Sales Bills</h5>
                 </div>
                 <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0"> 110/70</h3>
@@ -59,7 +59,7 @@
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Blood Pressure</h5>
+                  <h5 class="float-end">Unpaid Cash Bills</h5>
                 </div>
                 <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">650</h3>
@@ -81,7 +81,7 @@
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Glucose Level</h5>
+                  <h5 class="float-end">Unpaid Expe.Bills Cr.</h5>
                 </div>
                 <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">88-75</h3>
@@ -102,7 +102,7 @@
               </div>
               <div class="card-right">
                 <div>
-                  <h5 class="float-end">Blood Count</h5>
+                  <h5 class="float-end">Unpaid Expenses Cash</h5>
                 </div>
                 <div class="col-green">
                   <h3 class="font-weight-bold float-end mb-0">9,456/mL</h3>
@@ -122,7 +122,7 @@
           <div class="card">
             <div class="card-body">
               <div class="float-start">
-                <h6 class="text-muted">Resting Heart Rate</h6>
+                <h6 class="text-muted">Expenses Chart Weekly</h6>
                 <h5>72 bmp <span class="text-muted font-12">(Average)</span></h5>
               </div>
               <div class="mb-5">
@@ -140,7 +140,7 @@
           <div class="card">
             <div class="card-body">
               <div class="float-start">
-                <h6 class="text-muted">Performance Heart Rate</h6>
+                <h6 class="text-muted">Expenses Chart Monthly</h6>
                 <h5>129 bmp <span class="text-muted font-12">(Average)</span></h5>
               </div>
               <div class="mb-5">
@@ -157,7 +157,7 @@
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Medications</h2>
+              <h2>Top Unpaid Bills</h2>
             </div>
             <div class="body">
               <div class="table-responsive">
@@ -218,7 +218,7 @@
           <div class="card">
             <div class="body">
               <mat-tab-group dynamicHeight>
-                <mat-tab label="Upcoming Appointment">
+                <mat-tab label="Unbilled Shipments">
                   <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
                     <li class="app-list">
                       <img alt="image" class="rounded-circle" width="40" src="assets/images/user/usrbig1.jpg">
@@ -396,7 +396,7 @@
                     </li>
                   </ul>
                 </mat-tab>
-                <mat-tab label="Past Appointment">
+                <mat-tab label="Unpaid Invoices">
                   <ul class="list-unstyled user-progress list-unstyled-border list-unstyled-noborder">
                     <li class="app-list">
                       <img alt="image" class="rounded-circle" width="40" src="assets/images/user/usrbig7.jpg">
@@ -581,7 +581,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
           <div class="card">
             <div class="header">
-              <h2>Reports/Documents</h2>
+              <h2>Invoices/Documents</h2>
             </div>
             <div class="body">
               <ul class="list-unstyled list-unstyled-border list-unstyled-noborder">
