--- a/src/app/admin/dashboard/purchasesdashboard/purchasesdashboard.component.html
+++ b/src/app/admin/dashboard/purchasesdashboard/purchasesdashboard.component.html
@@ -2,14 +2,14 @@
     <div class="content-block">
       <div class="block-header">
         <!-- breadcrumb -->
-        <app-breadcrumb [title]="'Doctor Dashboard'" [items]="[]" [active_item]="'Dashboard'"></app-breadcrumb>
+        <app-breadcrumb [title]="'Account Dashboard'" [items]="[]" [active_item]="'Dashboard'"></app-breadcrumb>
       </div>
       <!-- Widgets -->
       <div class="row">
         <div class="col-lg-3 col-sm-6">
           <div class="info-box7 l-bg-card1 order-info-box7">
             <div class="info-box7-block">
-              <h5 class="m-b-15">Todays Patients</h5>
+              <h5 class="m-b-15">Billed Amount</h5>
               <h2 class="text-end"><i class="fas fa-user-injured float-start"></i><span>231</span></h2>
               <p class="m-b-0">18% Higher Then Last Month</p>
             </div>
@@ -18,7 +18,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="info-box7 l-bg-card2 order-info-box7">
             <div class="info-box7-block">
-              <h5 class="m-b-15">Appointments</h5>
+              <h5 class="m-b-15">UnBilled Amount</h5>
               <h2 class="text-end"><i class="far fa-calendar-check float-start"></i><span>122</span></h2>
               <p class="m-b-0">21% Higher Then Last Month</p>
             </div>
@@ -27,7 +27,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="info-box7 l-bg-card3 order-info-box7">
             <div class="info-box7-block">
-              <h5 class="m-b-15">Todays Operations</h5>
+              <h5 class="m-b-15">Total Expenses</h5>
               <h2 class="text-end"><i class="fas fa-cut float-start"></i><span>28</span></h2>
               <p class="m-b-0">37% Higher Then Last Month</p>
             </div>
@@ -36,7 +36,7 @@
         <div class="col-lg-3 col-sm-6">
           <div class="info-box7 l-bg-card4 order-info-box7">
             <div class="info-box7-block">
-              <h5 class="m-b-15">Online Appointment</h5>
+              <h5 class="m-b-15">Unclaimed Expenses</h5>
               <h2 class="text-end"><i class="fab fa-internet-explorer float-start"></i><span>42</span></h2>
               <p class="m-b-0">10% Higher Then Last Month</p>
             </div>
@@ -49,7 +49,7 @@
           <div class="card">
             <div class="header">
               <h2>
-                Patients Survay</h2>
+                P&L Analysis</h2>
   
             </div>
             <div class="body">
@@ -63,7 +63,7 @@
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Appointment Review</h2>
+              <h2>P&L Review</h2>
   
             </div>
             <div class="body">
@@ -72,15 +72,15 @@
               <div class="text-center p-t-20">
                 <div class="chart-note">
                   <span class="dot bg-orange"></span>
-                  <span>Face To Face</span>
+                  <span>Sales</span>
                 </div>
                 <div class="chart-note">
                   <span class="dot bg-indigo"></span>
-                  <span>E-Consult</span>
+                  <span>Expenses</span>
                 </div>
                 <div class="chart-note msr-0">
                   <span class="dot bg-green"></span>
-                  <span>Available</span>
+                  <span>Unclaimed Expenses</span>
                 </div>
               </div>
               <div class="text-center p-t-20">
@@ -95,7 +95,7 @@
           <div class="card">
             <div class="header">
               <h2>
-                Todays Appointment</h2>
+                Vendor Bills</h2>
   
             </div>
             <div class="tableBody">
@@ -104,12 +104,12 @@
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Patient Name</th>
-                      <th>Gender</th>
-                      <th>Last Visit</th>
-                      <th>Diseases</th>
+                      <th>Vendor Name</th>
+                      <th>Month</th>
+                      <th>Invoice Date</th>
+                      <th>Amount</th>
                       <th>Report</th>
-                      <th>Details </th>
+                      <th>Overdue Days</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -224,7 +224,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
           <div class="card">
             <div class="header">
-              <h2>Patients Group</h2>
+              <h2>Topmost Vendors</h2>
             </div>
             <div class="list-body">
               <ul class="list-unstyled list-unstyled-noborder">
@@ -343,7 +343,7 @@
           <div class="card">
             <div class="header">
               <h2>
-                Doctors List</h2>
+                Users List</h2>
   
             </div>
             <div class="tableBody">
@@ -352,7 +352,7 @@
                   <thead>
                     <tr>
                       <th>#</th>
-                      <th>Doctor Name</th>
+                      <th>User Name</th>
                       <th>Status</th>
                     </tr>
                   </thead>
@@ -444,7 +444,7 @@
         <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
           <div class="card">
             <div class="header">
-              <h2>Number Of Patients</h2>
+              <h2>Voucher Summary</h2>
             </div>
             <div class="body">
               <apx-chart [series]="linechartOptions.series" [chart]="linechartOptions.chart"
